# portfolio-contact-service

./: dotenv.config.js  main.py  model.env  package-lock.json  package.json  pyproject.toml  scripts.py  serverless.yaml
_scripts/db/: mongo_start.py
app/adapters/controllers/: contact_controller.py
app/adapters/repositories/: __init__.py  contact_repository.py
app/contracts/: db_contract.py  email_sender_contract.py
app/core/useCases/: __init__.py  notify_contact_use_case.py  save_contact_use_case.py
app/factories/: email_sender.py
app/infra/configs/: enviroment.py
app/infra/db/: __init__.py  dynamo.py  mongo.py
app/infra/services/: mail.py
app/main/factories/: __init__.py  databases.py  email_sender.py  repositories_factory.py
app/main/routes/: __init__.py  contacts.py
app/main/utils/exceptions/: __init__.py  notification_exception.py  save_contact_exeption.py
app/main/utils/exceptions/http/: execution_error_exception.py
app/models/: contact.py
app/ports/: __init__.py  contact_repository_contract.py
app/routes/: __init__.py  contacts.py
app/services/: mail.py
configs/: cors.py  enviroment.py
factories/: email_sender.py
routes/: controllers.py
scripts/db/: dynamo_start.py
tests/e2e/: test_send_email.py
tests/http/: send-mail.http
