[tool.poetry]
name = "portfolio-email-service"
version = "0.1.0"
description = ""
authors = ["OscarSilvaOfficial <OscarSilvaOfficial>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.1"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
mangum = "^0.14.1"
boto3 = "^1.21.41"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
requests = "^2.27.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
