[tool.poetry]
name = "portfolio-contact-service"
version = "0.1.0"
description = ""
authors = ["OscarSilvaOfficial <OscarSilvaOfficial>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.1"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
mangum = "^0.14.1"
boto3 = "^1.21.41"
fast-nosql-manager = "^0.3.1"
pymongo = {extras = ["srv"], version = "^4.1.1"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
requests = "^2.27.1"
typer-cli = "^0.0.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)0s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%d/%m/%Y %H:%M:%S"

[tool.poetry.scripts]
dev = "run:main"